# mcp

./: .gitignore  .secrets.baseline  404.html  index.html  mkdocs.yml  sitemap.xml
src/openapi-mcp-server/: .gitignore  AUTHENTICATION.md  AWS_BEST_PRACTICES.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml  pyrightconfig.json  run_petstore_test.sh  run_tests.sh  sbom.json  test_api_name.py  test_operation_prompt.py  test_prompt_arguments.py  test_secure_operation_prompt.py
src/openapi-mcp-server/awslabs/openapi_mcp_server/: __init__.py  route_patch.py  server.py
src/openapi-mcp-server/awslabs/openapi_mcp_server/api/: __init__.py  config.py  discovery.py
src/openapi-mcp-server/awslabs/openapi_mcp_server/auth/: __init__.py  api_key_auth.py  auth_cache.py  auth_errors.py  auth_factory.py  base_auth.py  (+6 more)
src/openapi-mcp-server/tests/: README.md  test_client.py  test_exception.py  test_init.py  test_main.py  test_main_extended.py  test_route_patch.py  test_server.py  test_server_coverage_boost_2.py  test_server_extended.py  test_server_httpx_version.py  test_server_part1.py  test_server_signal_handlers.py
src/openapi-mcp-server/tests/api/: test_config.py  test_discovery.py
src/openapi-mcp-server/tests/auth/: test_api_key_auth.py  test_auth_cache.py  test_auth_errors.py  test_auth_factory.py  test_auth_factory_caching.py  test_auth_protocol.py  test_auth_protocol_boost.py  test_auth_protocol_extended.py  test_base_auth.py  test_basic_auth.py  test_bearer_auth.py  test_cognito_auth.py  test_cognito_auth_additional_coverage.py  test_cognito_auth_boost_coverage.py  test_cognito_auth_client_credentials.py  test_register.py
src/openapi-mcp-server/tests/functional/: test_petstore.py
src/openapi-mcp-server/tests/prompts/: test_api_documentation.py  test_api_documentation_coverage.py  test_api_documentation_errors.py  test_api_documentation_extended.py  test_api_documentation_full_coverage.py  test_api_documentation_improved.py  test_api_overview.py  test_base.py  test_enhanced_instructions.py  test_examples.py  test_instructions.py  test_mapping_reference.py  test_mcp_prompt_manager.py  test_mcp_prompt_manager_integration.py  test_operation_instructions.py  test_operation_prompts.py  test_operation_prompts_extended.py  test_operation_prompts_extended1.py  test_operation_prompts_extended2.py  test_operation_prompts_extended3.py  test_prompt_optimization.py  test_prompt_orchestrator.py  test_prompt_orchestrator_fixed.py  test_prompt_orchestrator_improved.py  test_prompt_registration.py  test_workflow_prompts.py  test_workflow_prompts_imports.py
src/openapi-mcp-server/tests/utils/: test_cache_provider.py  test_error_handler.py  test_error_handler_boost.py  test_error_handler_extended.py  test_error_handler_fix.py  test_http_client.py  test_http_client_extended.py  test_http_client_extended2.py  test_metrics_provider.py  test_metrics_provider_decorators.py  test_metrics_provider_extended2.py  test_metrics_provider_prometheus.py  test_openapi.py  test_openapi_validator.py
(+110 files in other folders)
