[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awslabs.openapi-mcp-server"
version = "0.1.0"
description = "An AWS Labs Model Context Protocol (MCP) server for OpenAPI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
license-files = ["LICENSE", "NOTICE" ]
authors = [
    {name = "Amazon Web Services"},
    {name = "AWSLabs MCP", email="203918161+awslabs-mcp@users.noreply.github.com"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.24.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "boto3>=1.28.0",
    "cachetools>=5.3.0",
    "loguru>=0.7.0",
    "uvicorn>=0.23.0",
    "tenacity>=8.2.0",
    "prance>=23.6.21.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0.0"]
prometheus = ["prometheus-client>=0.17.0"]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "prance>=23.6.21.0",
]
all = ["pyyaml>=6.0.0", "prometheus-client>=0.17.0"]

[project.urls]
Homepage = "https://awslabs.github.io/mcp/"
Documentation = "https://awslabs.github.io/mcp/servers/openapi-mcp-server/"
Source = "https://github.com/awslabs/mcp.git"
"Bug Tracker" = "https://github.com/awslabs/mcp/issues"
Changelog = "https://github.com/awslabs/mcp/blob/main/src/openapi-mcp-server/CHANGELOG.md"

[project.scripts]
"awslabs.openapi-mcp-server" = "awslabs.openapi_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["awslabs"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
    "**/.ipynb_checkpoints"
]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
